<resources>
    <string name="app_name">Person Form</string>
    <string name="action_settings">Settings</string>
    <string name="title">Data</string>
    <string name="name">Name</string>
    <string name="id">Identification</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
</resources>
